--- a/qa/hello.yaml
+++ b/qa/hello.yaml
@@ -16,4 +16,4 @@ spec:
     spec:
       containers:
       - name: hello
-        image: linuxacademycontent/gitops:hellov1.0
+        image: sseoussama/gitops:hellov1.0
